--- a/my-app-popover/src/HeaderBlock/headerStyle.css
+++ b/my-app-popover/src/HeaderBlock/headerStyle.css
@@ -17,7 +17,11 @@ h1 {
 }
 
 .header__notification-button {
-
+    display: flex;
+    padding: 0;
+    background: none;
+    border: none;
+    cursor: pointer;
 }
 
 .header__notification-container-counter {
