--- a/my-app-popover/src/components/MainBlock/Style.css
+++ b/my-app-popover/src/components/MainBlock/Style.css
@@ -1,5 +1,5 @@
 .main {
-    max-width: 80%;
+    max-width: 900px;
     margin: 10px auto;
     border: 1px solid black;
     background-color: blanchedalmond;
