fix: все сломал еще раз

--- a/my-app-popover/src/components/HeaderBlock/Style.css
+++ b/my-app-popover/src/components/HeaderBlock/Style.css
@@ -50,7 +50,7 @@ h1 {
 
 .header__notification-message-box {
     width: 220px;
-    height: 120px;
+    min-height: 120px;
     box-sizing: border-box;
     background: lightgrey;
     position: absolute;
